--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body{
   display: flex;
  
 }
-h1{
+h1,h3{
   color: #B6EADA;
  
 }
@@ -38,11 +38,11 @@ span{
 }
 .text{
   /* text-align:center; */
-  justify-content: flex-start;
-  align-items:  flex-start;
+  justify-content: flex-end;
+  align-items:  flex-end;
   display: flex;
-  flex-direction: row;
-  margin-left: 15px;
+  /* flex-direction: row; */
+  margin-left: 45px;
   display: inline;
 }
 button{
@@ -57,5 +57,19 @@ button{
   align-items: center;
   display: flex;
   margin-top: 5px;
+
+}
+h3{
+  text-align: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+  margin-bottom: 0;
+  font-size: medium;
+}
+h6{
+  color: red;
+  display: block;
+  margin-top: 0;
 
 }
