--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body{
 .app{
   background: rgba(255, 255, 255, 0.192);
   backdrop-filter: blur(10px);
-  height: 300px;
+  height: 350px;
   width: 600px;
   border-radius: 15px;
   border: 1px solid rgba(43, 43, 43, 0.568);
@@ -28,7 +28,7 @@ h1,h3{
 }
 img{
   width:300px;
-  height: 290px;
+  height: 340px;
   border-radius: 5px;
 }
 span{
@@ -47,9 +47,13 @@ span{
 }
 button{
   display: block;
-  width: 3em;
-  height: 3em;
+  width: 5em;
+  height: 5em;
   border-radius: 50%;
+  color: #301E67;
+  font-weight: bold;
+  font-size: x-small;
+
 }
 .btn{
   text-align: center;
@@ -72,4 +76,13 @@ h6{
   display: block;
   margin-top: 0;
 
+}
+#result{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+input{
+  border: red 
 }
