--- a/src/App.css
+++ b/src/App.css
@@ -93,4 +93,61 @@ input{
 } 
 @media  screen and (max-width:500px) and (orientation:portrait) {
   
+  .app {
+    
+    height: 550px;
+    width: 90%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    margin: -105px auto 0 auto;
+  }
+
+  
+  img {
+    width: 95%;
+    height: auto;
+    margin: 0 auto;
+  }
+  
+  .text {
+    flex-wrap: wrap;
+    margin-top: 1px;
+    font-size: 1.1em;
+    margin-left: 0;
+  }
+  
+  .text > * {
+    flex-basis: 100%;
+  }
+  
+  h3 {
+    text-align: center;
+    margin-bottom: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  
+  h6 {
+    margin-top: 0;
+  }
+  
+  .btn {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 5px;
+  }
+  
+  #result,
+  #bmi {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+ 
 }
